// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Removes close button 1`] = `
.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

@media screen and (min-width:601px) {
  .emotion-12 {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: -4pxpx;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  font-size: 1rem;
}

@media screen and (min-width:601px) {
  .emotion-6 {
    font-size: 0.875rem;
  }
}

.emotion-0 {
  margin: 0;
  color: #0c0d0d;
  font-weight: 700;
  line-height: 1.5rem;
  font-size: 1.125rem;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  font-weight: 700;
}

@media screen and (min-width:601px) {
  .emotion-0 {
    font-size: 1rem;
  }
}

<div
  className="emotion-12 emotion-13"
  type="info"
>
  <div
    className="emotion-10 emotion-5"
  >
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="emotion-4 emotion-5"
      >
        <div
          className="emotion-2 emotion-3"
        >
          <p
            className="emotion-0 emotion-1"
            color="textHeading"
            fontSize={
              Array [
                "text-l",
                "text",
              ]
            }
            fontWeight="bold"
          >
            My Title
          </p>
        </div>
      </div>
      <div
        className="emotion-6 emotion-3"
        fontSize={
          Array [
            "text",
            "text-s",
          ]
        }
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders a number 1`] = `
.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

@media screen and (min-width:601px) {
  .emotion-11 {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: -4pxpx;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  padding: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

@media screen and (min-width:601px) {
  .emotion-1 {
    width: 16px;
    height: 16px;
  }
}

.emotion-1:focus {
  outline: none;
}

.emotion-0 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.emotion-5 {
  font-size: 1rem;
}

@media screen and (min-width:601px) {
  .emotion-5 {
    font-size: 0.875rem;
  }
}

<div
  className="emotion-11 emotion-12"
  type="info"
>
  <div
    className="emotion-9 emotion-4"
  >
    <div
      className="emotion-7 emotion-6"
    >
      <div
        className="emotion-3 emotion-4"
      >
        <button
          className="emotion-1 emotion-2"
          height={
            Array [
              "18px",
              "16px",
            ]
          }
          onClick={[Function]}
          type="button"
          width={
            Array [
              "18px",
              "16px",
            ]
          }
        >
          <svg
            className="emotion-0"
            viewBox="0 0 8 8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fillRule="evenodd"
              transform="translate(-4 -4)"
            >
              <path
                d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
                fillOpacity=".5"
              />
            </g>
          </svg>
        </button>
      </div>
      <div
        className="emotion-5 emotion-6"
        fontSize={
          Array [
            "text",
            "text-s",
          ]
        }
      >
        300
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders correctly 1`] = `
.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

@media screen and (min-width:601px) {
  .emotion-11 {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: -4pxpx;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  padding: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

@media screen and (min-width:601px) {
  .emotion-1 {
    width: 16px;
    height: 16px;
  }
}

.emotion-1:focus {
  outline: none;
}

.emotion-0 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.emotion-5 {
  font-size: 1rem;
}

@media screen and (min-width:601px) {
  .emotion-5 {
    font-size: 0.875rem;
  }
}

<div
  className="emotion-11 emotion-12"
  type="info"
>
  <div
    className="emotion-9 emotion-4"
  >
    <div
      className="emotion-7 emotion-6"
    >
      <div
        className="emotion-3 emotion-4"
      >
        <button
          className="emotion-1 emotion-2"
          height={
            Array [
              "18px",
              "16px",
            ]
          }
          onClick={[Function]}
          type="button"
          width={
            Array [
              "18px",
              "16px",
            ]
          }
        >
          <svg
            className="emotion-0"
            viewBox="0 0 8 8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fillRule="evenodd"
              transform="translate(-4 -4)"
            >
              <path
                d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
                fillOpacity=".5"
              />
            </g>
          </svg>
        </button>
      </div>
      <div
        className="emotion-5 emotion-6"
        fontSize={
          Array [
            "text",
            "text-s",
          ]
        }
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders type danger correctly 1`] = `
.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: -4pxpx;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  padding: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

@media screen and (min-width:601px) {
  .emotion-1 {
    width: 16px;
    height: 16px;
  }
}

.emotion-1:focus {
  outline: none;
}

.emotion-0 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.emotion-5 {
  font-size: 1rem;
}

@media screen and (min-width:601px) {
  .emotion-5 {
    font-size: 0.875rem;
  }
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
  background: #fee3e3;
  border-color: #b93435;
}

@media screen and (min-width:601px) {
  .emotion-11 {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }
}

<div
  className="emotion-11 emotion-12"
  type="danger"
>
  <div
    className="emotion-9 emotion-4"
  >
    <div
      className="emotion-7 emotion-6"
    >
      <div
        className="emotion-3 emotion-4"
      >
        <button
          className="emotion-1 emotion-2"
          height={
            Array [
              "18px",
              "16px",
            ]
          }
          onClick={[Function]}
          type="button"
          width={
            Array [
              "18px",
              "16px",
            ]
          }
        >
          <svg
            className="emotion-0"
            viewBox="0 0 8 8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fillRule="evenodd"
              transform="translate(-4 -4)"
            >
              <path
                d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
                fillOpacity=".5"
              />
            </g>
          </svg>
        </button>
      </div>
      <div
        className="emotion-5 emotion-6"
        fontSize={
          Array [
            "text",
            "text-s",
          ]
        }
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders type info correctly 1`] = `
.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

@media screen and (min-width:601px) {
  .emotion-11 {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: -4pxpx;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  padding: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

@media screen and (min-width:601px) {
  .emotion-1 {
    width: 16px;
    height: 16px;
  }
}

.emotion-1:focus {
  outline: none;
}

.emotion-0 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.emotion-5 {
  font-size: 1rem;
}

@media screen and (min-width:601px) {
  .emotion-5 {
    font-size: 0.875rem;
  }
}

<div
  className="emotion-11 emotion-12"
  type="info"
>
  <div
    className="emotion-9 emotion-4"
  >
    <div
      className="emotion-7 emotion-6"
    >
      <div
        className="emotion-3 emotion-4"
      >
        <button
          className="emotion-1 emotion-2"
          height={
            Array [
              "18px",
              "16px",
            ]
          }
          onClick={[Function]}
          type="button"
          width={
            Array [
              "18px",
              "16px",
            ]
          }
        >
          <svg
            className="emotion-0"
            viewBox="0 0 8 8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fillRule="evenodd"
              transform="translate(-4 -4)"
            >
              <path
                d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
                fillOpacity=".5"
              />
            </g>
          </svg>
        </button>
      </div>
      <div
        className="emotion-5 emotion-6"
        fontSize={
          Array [
            "text",
            "text-s",
          ]
        }
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders type success correctly 1`] = `
.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: -4pxpx;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  padding: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

@media screen and (min-width:601px) {
  .emotion-1 {
    width: 16px;
    height: 16px;
  }
}

.emotion-1:focus {
  outline: none;
}

.emotion-0 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.emotion-5 {
  font-size: 1rem;
}

@media screen and (min-width:601px) {
  .emotion-5 {
    font-size: 0.875rem;
  }
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
  background: #e0f8e6;
  border-color: #26853f;
}

@media screen and (min-width:601px) {
  .emotion-11 {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }
}

<div
  className="emotion-11 emotion-12"
  type="success"
>
  <div
    className="emotion-9 emotion-4"
  >
    <div
      className="emotion-7 emotion-6"
    >
      <div
        className="emotion-3 emotion-4"
      >
        <button
          className="emotion-1 emotion-2"
          height={
            Array [
              "18px",
              "16px",
            ]
          }
          onClick={[Function]}
          type="button"
          width={
            Array [
              "18px",
              "16px",
            ]
          }
        >
          <svg
            className="emotion-0"
            viewBox="0 0 8 8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fillRule="evenodd"
              transform="translate(-4 -4)"
            >
              <path
                d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
                fillOpacity=".5"
              />
            </g>
          </svg>
        </button>
      </div>
      <div
        className="emotion-5 emotion-6"
        fontSize={
          Array [
            "text",
            "text-s",
          ]
        }
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders type warning correctly 1`] = `
.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: -4pxpx;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  padding: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

@media screen and (min-width:601px) {
  .emotion-1 {
    width: 16px;
    height: 16px;
  }
}

.emotion-1:focus {
  outline: none;
}

.emotion-0 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.emotion-5 {
  font-size: 1rem;
}

@media screen and (min-width:601px) {
  .emotion-5 {
    font-size: 0.875rem;
  }
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
  background: #fdebd0;
  border-color: #e69524;
}

@media screen and (min-width:601px) {
  .emotion-11 {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }
}

<div
  className="emotion-11 emotion-12"
  type="warning"
>
  <div
    className="emotion-9 emotion-4"
  >
    <div
      className="emotion-7 emotion-6"
    >
      <div
        className="emotion-3 emotion-4"
      >
        <button
          className="emotion-1 emotion-2"
          height={
            Array [
              "18px",
              "16px",
            ]
          }
          onClick={[Function]}
          type="button"
          width={
            Array [
              "18px",
              "16px",
            ]
          }
        >
          <svg
            className="emotion-0"
            viewBox="0 0 8 8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fillRule="evenodd"
              transform="translate(-4 -4)"
            >
              <path
                d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
                fillOpacity=".5"
              />
            </g>
          </svg>
        </button>
      </div>
      <div
        className="emotion-5 emotion-6"
        fontSize={
          Array [
            "text",
            "text-s",
          ]
        }
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert renders with a title 1`] = `
.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.06),0 3px 6px 0 rgba(0,0,0,0.03),0 1px 2px 0 rgba(0,0,0,0.1);
  border-top: 4px solid;
  border-radius: 0.375rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
  background: #e9fafe;
  border-color: #2875c6;
}

@media screen and (min-width:601px) {
  .emotion-15 {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: -4pxpx;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  font-size: 1rem;
  color: #0c0d0d;
  background-color: rgba(12,13,13,0.1);
  border-radius: 50%;
  border: none;
  cursor: pointer;
  padding: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

@media screen and (min-width:601px) {
  .emotion-5 {
    width: 16px;
    height: 16px;
  }
}

.emotion-5:focus {
  outline: none;
}

.emotion-4 {
  width: 0.5em;
  height: 0.5em;
  fill: black;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.emotion-9 {
  font-size: 1rem;
}

@media screen and (min-width:601px) {
  .emotion-9 {
    font-size: 0.875rem;
  }
}

.emotion-0 {
  margin: 0;
  color: #0c0d0d;
  font-weight: 700;
  line-height: 1.5rem;
  font-size: 1.125rem;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  font-weight: 700;
}

@media screen and (min-width:601px) {
  .emotion-0 {
    font-size: 1rem;
  }
}

<div
  className="emotion-15 emotion-16"
  type="info"
>
  <div
    className="emotion-13 emotion-8"
  >
    <div
      className="emotion-2 emotion-3"
    >
      <div
        className="emotion-7 emotion-8"
      >
        <div
          className="emotion-2 emotion-3"
        >
          <p
            className="emotion-0 emotion-1"
            color="textHeading"
            fontSize={
              Array [
                "text-l",
                "text",
              ]
            }
            fontWeight="bold"
          >
            My Title
          </p>
        </div>
        <button
          className="emotion-5 emotion-6"
          height={
            Array [
              "18px",
              "16px",
            ]
          }
          onClick={[Function]}
          type="button"
          width={
            Array [
              "18px",
              "16px",
            ]
          }
        >
          <svg
            className="emotion-4"
            viewBox="0 0 8 8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fillRule="evenodd"
              transform="translate(-4 -4)"
            >
              <path
                d="M9.414 8l2.122-2.121a1 1 0 1 0-1.415-1.415L8 6.586 5.879 4.464A1 1 0 0 0 4.464 5.88L6.586 8l-2.122 2.121a1 1 0 0 0 1.415 1.415L8 9.414l2.121 2.122a1 1 0 0 0 1.415-1.415L9.414 8z"
                fillOpacity=".5"
              />
            </g>
          </svg>
        </button>
      </div>
      <div
        className="emotion-9 emotion-3"
        fontSize={
          Array [
            "text",
            "text-s",
          ]
        }
      >
        Hello World
      </div>
    </div>
  </div>
</div>
`;
